--- a/packages/storybook-html/src/components/header/header.html
+++ b/packages/storybook-html/src/components/header/header.html
@@ -1,68 +1,74 @@
-<!-- HEADER DEFAULT -->
 <header class="header">
-    <!-- NAV GLOBAL -->
-    <div class="nav-global">
-        <div class="row small-collapse">
-            <div class="small-9 large-4 columns">
-                <a href="https://www.uq.edu.au/" title="UQ Homepage" class="logo-uq" onclick="gtag('event', 'click',
-                {'event_category': 'UQ Header', 'event_label': 'Logo: UQ home'});">The University of Queensland</a>
+    <div class="header__container">
+        <div class="nav-global">
+            <div class="logo">
+                <a class="logo--large gtm-processed" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v9/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
+                <a class="logo--small gtm-processed" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v9/logos/corporate/uq-logo--reversed.svg"></a>
             </div>
-            <div class="small-3 large-8 columns">
-                <!-- MENU GLOBAL -->
-                <nav class="menu-global">
-                    <ul class="menu-global__list">
-                        <li class="menu-global__item"><a class="menu-global__link show-for-large-up" href="https://www.uq.edu.au/contacts/" onclick="gtag('event', 'click',
-                          {'event_category': 'UQ Header', 'event_label': 'Contacts'});">Contacts</a></li>
-                        <li class="menu-global__item"><a class="menu-global__link show-for-large-up" href="https://future-students.uq.edu.au/" onclick="gtag('event', 'click',
-                          {'event_category': 'UQ Header', 'event_label': 'Study'});">Study</a></li>
-                        <li class="menu-global__item"><a class="menu-global__link show-for-large-up" href="https://maps.uq.edu.au/" onclick="gtag('event', 'click',
-                          {'event_category': 'UQ Header', 'event_label': 'Maps'});">Maps</a></li>
-                        <li class="menu-global__item"><a class="menu-global__link show-for-large-up" href="https://www.uq.edu.au/news/" onclick="gtag('event', 'click',
-                          {'event_category': 'UQ Header', 'event_label': 'News'});">News</a></li>
-                        <li class="menu-global__item"><a class="menu-global__link show-for-large-up" href="https://www.uq.edu.au/events/" onclick="gtag('event', 'click',
-                          {'event_category': 'UQ Header', 'event_label': 'Events'});">Events</a></li>
-                        <li class="menu-global__item"><a class="menu-global__link show-for-large-up" href="https://jobs.uq.edu.au/" onclick="gtag('event', 'click',
-                            {'event_category': 'UQ Header', 'event_label': 'Jobs'});">Jobs</a></li>
-                        <li class="menu-global__item"><a class="menu-global__link show-for-large-up" href="https://www.library.uq.edu.au/" onclick="gtag('event', 'click',
-                          {'event_category': 'UQ Header', 'event_label': 'Library'});">Library</a></li>
-                        <li class="menu-global__item"><a class="menu-global__link show-for-large-up" href="https://giving.uq.edu.au/" onclick="gtag('event', 'click',
-                          {'event_category': 'UQ Header', 'event_label': 'Give now'});">Give now</a></li>
-                        <li class="menu-global__item"><a class="menu-global__link show-for-large-up" href="https://my.uq.edu.au/" onclick="gtag('event', 'click',
-                          {'event_category': 'UQ Header', 'event_label': 'my.UQ'});">my.UQ</a></li>
-                        <li class="menu-global__item">
-                            <button class="tcon tcon-search--xcross menu-global__link header__search-toggle" aria-label="Toggle search">
-                                <span class="tcon-search__item" aria-hidden="true"></span>
-                                <span class="tcon-visuallyhidden">Toggle search</span>
-                            </button>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
+            <nav class="menu-global">
+                <ul>
+                    <li><a href="https://www.uq.edu.au/contacts/" class="gtm-processed">Contacts</a></li>
+                    <li><a href="https://future-students.uq.edu.au/" class="gtm-processed">Study</a></li>
+                    <li><a href="https://maps.uq.edu.au/" class="gtm-processed">Maps</a></li>
+                    <li><a href="https://www.uq.edu.au/news/" class="gtm-processed">News</a></li>
+                    <li><a href="https://www.uq.edu.au/events/" class="gtm-processed">Events</a></li>
+                    <li><a href="https://jobs.uq.edu.au/" class="gtm-processed">Jobs</a></li>
+                    <li><a href="https://www.library.uq.edu.au/" class="gtm-processed">Library</a></li>
+                    <li><a href="https://giving.uq.edu.au/" class="gtm-processed">Give now</a></li>
+                    <li><a href="https://my.uq.edu.au/" class="gtm-processed">my.UQ</a></li>
+                    <li class="menu-global__search-toggle"><button class="js-global-search-toggle button button--icon-only icon--white processed icon--standard--search">Search</button></li>
+                </ul>
+            </nav>
         </div>
-        <!-- SEARCH -->
-        <div class="header__search">
-            <div class="row">
-                <div class="small-12 columns">
-                    <form action="https://www.uq.edu.au/search/" method="get" class="form-search">
-                        <fieldset class="form-search__fieldset">
-                            <legend class="form-search__legend hide">Site search</legend>
-                            <label class="form-search__title" for="form-search__query">What are you looking for?</label>
-                            <span class="form-search__input-icon">
-                                <input type="text" name="q" class="form-search__input-text small-12 columns" id="form-search__query">
-                            </span>
-                            <input type="submit" title="Search all of UQ" class="form-search__submit" value="" name="submit">
-                            <input type="hidden" value="xml_no_dtd" name="output">
-                            <input type="hidden" value="ws" name="client">
-                            <input type="hidden" value="ws" name="proxystylesheet">
-                        </fieldset>
-                    </form>
-                    <!-- MENU GLOBAL MOBILE -->
-                    <div class="menu-global--mobile"></div>
+        <!-- <div class="js-global-search header__search">
+            <form data-gtm-category="Header search bar" data-gtm-action="Text search" data-gtm-form-action="" class="header__search__form" data-drupal-selector="uq-global-search" action="https://www.uq.edu.au/search/" method="get" id="uq-global-search" accept-charset="UTF-8">
+                <fieldset data-drupal-selector="edit-as-sitesearch" id="edit-as-sitesearch--wrapper" class="fieldgroup form-composite js-form-item form__item js-form-wrapper form__wrapper">
+                    <legend class="hidden">
+                        <span class="fieldset__legend">What are you looking for?</span>
+                    </legend>
+                    <span class="text--emphasis text--xl text--white fieldset__legend">What are you looking for?</span>
+                    <div class="fieldset__wrapper">
+                        <div id="edit-as-sitesearch" class="header__search__radios">
+                            <div class="js-form-item form-item js-form-type-radio form-item-as-sitesearch js-form-item-as-sitesearch">
+                                <input data-drupal-selector="edit-as-sitesearch-" type="radio" id="edit-as-sitesearch-" name="as_sitesearch" value="" class="form-radio">
+                                <label for="edit-as-sitesearch-" class="option">
+                                  Search all UQ websites
+                                </label>
+                            </div>
+                            <div class="js-form-item form-item js-form-type-radio form-item-as-sitesearch js-form-item-as-sitesearch">
+                                <input data-drupal-selector="edit-as-sitesearch-httpsfuture-studentsuqeduau" type="radio" id="edit-as-sitesearch-httpsfuture-studentsuqeduau" name="as_sitesearch" value="https://future-students.uq.edu.au/" checked="checked" class="form-radio">
+                                <label for="edit-as-sitesearch-httpsfuture-studentsuqeduau" class="option">
+                                  Search this website (xyz.uq.edu.au)
+                                </label>
+                            </div>
+                        </div>
+
+                    </div>
+                </fieldset>
+                <div class="form__item">
+                    <span class="input__text--inline-button select--wide">
+                      <label for="edit-q" class="visually-hidden">
+                        Search term
+                      </label>
+                      <input data-gtm-trigger="change" data-gtm-form-search="" data-drupal-selector="edit-q" type="text" id="edit-q" name="q" value="" size="60" maxlength="128" class="form-text gtm-processed">
+                      <span class="button button--submit-icon button--tertiary button--icon-only icon--standard--search">
+                        <input data-gtm-trigger="click" data-drupal-selector="edit-submit" type="submit" id="edit-submit--2" name="op" value="Search" class="button js-form-submit form-submit gtm-processed">    </span>
+                      </span>
                 </div>
-            </div>
-        </div>
-  
+            </form>
+
+            <nav class="header__secondary-nav nav nav--inline">
+                <ul>
+                    <li><a href="https://www.uq.edu.au/contacts/" class="gtm-processed">Contacts</a></li>
+                    <li><a href="https://future-students.uq.edu.au/" class="gtm-processed">Study</a></li>
+                    <li><a href="https://maps.uq.edu.au/" class="gtm-processed">Maps</a></li>
+                    <li><a href="https://www.uq.edu.au/news/" class="gtm-processed">News</a></li>
+                    <li><a href="https://www.uq.edu.au/events/" class="gtm-processed">Events</a></li>
+                    <li><a href="https://www.library.uq.edu.au/" class="gtm-processed">Library</a></li>
+                    <li><a href="https://giving.uq.edu.au/" class="gtm-processed">Give now</a></li>
+                    <li><a href="https://my.uq.edu.au/" class="gtm-processed">my.UQ</a></li>
+                </ul>
+            </nav>
+        </div> -->
     </div>
-    
-  </header>
-  <!-- HEADER DEFAULT: END-->  
+</header>
