Page header component review amends

--- a/packages/storybook-html/src/components/page-header/page-header.html
+++ b/packages/storybook-html/src/components/page-header/page-header.html
@@ -1,4 +1,4 @@
-<!-- Page Header (Default) -->
+<!-- Page header (default) -->
 <div class="page__header">  
   <div class="row">
     <div class="large-12 columns">
@@ -8,7 +8,7 @@
 </div>
 
 
-<!-- Page Header (Default) + Breadcrumb -->
+<!-- Page header (default) + Breadcrumb -->
 <div class="page__header">  
   <div class="row">
     <div class="large-12 columns">
