--- a/packages/storybook-html/src/components/header/header.html
+++ b/packages/storybook-html/src/components/header/header.html
@@ -2,21 +2,23 @@
     <div class="header__container">
         <div class="nav-global">
             <div class="logo">
-                <a class="logo--large gtm-processed" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v9/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
-                <a class="logo--small gtm-processed" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v9/logos/corporate/uq-logo--reversed.svg"></a>
+                <a class="logo--large" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v9/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
+                <a class="logo--small" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v9/logos/corporate/uq-logo--reversed.svg"></a>
             </div>
             <nav class="menu-global">
                 <ul>
-                    <li><a href="https://www.uq.edu.au/contacts/" class="gtm-processed">Contacts</a></li>
-                    <li><a href="https://future-students.uq.edu.au/" class="gtm-processed">Study</a></li>
-                    <li><a href="https://maps.uq.edu.au/" class="gtm-processed">Maps</a></li>
-                    <li><a href="https://www.uq.edu.au/news/" class="gtm-processed">News</a></li>
-                    <li><a href="https://www.uq.edu.au/events/" class="gtm-processed">Events</a></li>
-                    <li><a href="https://jobs.uq.edu.au/" class="gtm-processed">Jobs</a></li>
-                    <li><a href="https://www.library.uq.edu.au/" class="gtm-processed">Library</a></li>
-                    <li><a href="https://giving.uq.edu.au/" class="gtm-processed">Give now</a></li>
-                    <li><a href="https://my.uq.edu.au/" class="gtm-processed">my.UQ</a></li>
-                    <li class="menu-global__search-toggle"><button class="search-toggle__button">Search</button></li>
+                    <li><a href="https://www.uq.edu.au/contacts/">Contacts</a></li>
+                    <li><a href="https://future-students.uq.edu.au/">Study</a></li>
+                    <li><a href="https://maps.uq.edu.au/">Maps</a></li>
+                    <li><a href="https://www.uq.edu.au/news/">News</a></li>
+                    <li><a href="https://www.uq.edu.au/events/">Events</a></li>
+                    <li><a href="https://jobs.uq.edu.au/">Jobs</a></li>
+                    <li><a href="https://www.library.uq.edu.au/">Library</a></li>
+                    <li><a href="https://giving.uq.edu.au/">Give now</a></li>
+                    <li><a href="https://my.uq.edu.au/">my.UQ</a></li>
+                    <li class="menu-global__search-toggle">
+                        <button class="search-toggle__button">Search</button>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -32,13 +34,13 @@
                             <div class="form-item">
                                 <input type="radio" id="global-site-search" name="site-search-scope" value="" class="form-radio">
                                 <label for="global-site-search" class="option">
-                                  Search all UQ websites
+                                    Search all UQ websites
                                 </label>
                             </div>
                             <div class="form-item">
                                 <input type="radio" id="local-site-search" name="site-search-scope" value="https://xyz.uq.edu.au/" checked="checked" class="form-radio">
                                 <label for="local-site-search" class="option">
-                                  Search this website (xyz.uq.edu.au)
+                                    Search this website (xyz.uq.edu.au)
                                 </label>
                             </div>
                         </div>
@@ -46,28 +48,28 @@
                    
                 </fieldset>
                 <div class="nav-search__query">
-                    <span class="input__text--inline-button select--wide">
+                    <span class="search-query__wrapper">
                         <label for="edit-q" class="visually-hidden">
                             Search term
                         </label>
-                        <input data-gtm-trigger="change" data-gtm-form-search="" data-drupal-selector="edit-q" type="text" id="edit-q" name="q" value="" size="60" maxlength="128" class="form-text gtm-processed">
-                        <span class="button button--submit-icon button--tertiary button--icon-only icon--standard--search">
-                        <input data-gtm-trigger="click" data-drupal-selector="edit-submit" type="submit" id="edit-submit--2" name="op" value="Search" class="button js-form-submit form-submit gtm-processed">    </span>
-                    </span>
+                        <input type="text" id="edit-q" name="q" value="" size="60" maxlength="128" class="search-query__input">
+                        <span class="search-query__button">
+                            <input type="submit" id="edit-submit--2" name="op" value="Search" class="search-query__submit"></span>
+                        </span>
                 </div>
                 
             </form>
 
-            <nav class="header__secondary-nav nav nav--inline">
+            <nav class="menu-global">
                 <ul>
-                    <li><a href="https://www.uq.edu.au/contacts/" class="gtm-processed">Contacts</a></li>
-                    <li><a href="https://future-students.uq.edu.au/" class="gtm-processed">Study</a></li>
-                    <li><a href="https://maps.uq.edu.au/" class="gtm-processed">Maps</a></li>
-                    <li><a href="https://www.uq.edu.au/news/" class="gtm-processed">News</a></li>
-                    <li><a href="https://www.uq.edu.au/events/" class="gtm-processed">Events</a></li>
-                    <li><a href="https://www.library.uq.edu.au/" class="gtm-processed">Library</a></li>
-                    <li><a href="https://giving.uq.edu.au/" class="gtm-processed">Give now</a></li>
-                    <li><a href="https://my.uq.edu.au/" class="gtm-processed">my.UQ</a></li>
+                    <li><a href="https://www.uq.edu.au/contacts/">Contacts</a></li>
+                    <li><a href="https://future-students.uq.edu.au/">Study</a></li>
+                    <li><a href="https://maps.uq.edu.au/">Maps</a></li>
+                    <li><a href="https://www.uq.edu.au/news/">News</a></li>
+                    <li><a href="https://www.uq.edu.au/events/">Events</a></li>
+                    <li><a href="https://www.library.uq.edu.au/">Library</a></li>
+                    <li><a href="https://giving.uq.edu.au/">Give now</a></li>
+                    <li><a href="https://my.uq.edu.au/">my.UQ</a></li>
                 </ul>
             </nav>
         </div>
