--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -167,7 +167,7 @@
 
                 &__button {
                     position: absolute;
-                    top: calc(50% - 1rem);
+                    top: calc(50% - 1.4rem);
                     right: 0;
                     border-color: transparent;
                     margin-right: 0;
@@ -176,9 +176,24 @@
                     display: inline-block;
                     text-indent: 0;
                     padding: 0;
+                    width: 2.75rem;
+                    height: 2.75rem;
+                    overflow: hidden;
+                    &:before {
+                        content: "";
+                        position: absolute;
+                        display: block;
+                        width: 1.5rem;
+                        height: 1.5rem;
+                        top: .5rem;
+                        left: .5rem;
+                        background-size: 100%;
+                        background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cg fill='none' stroke='%23000' stroke-width='.75'%3E%3Cpath d='M6.57 11.145a4.573 4.573 0 10.003-9.146 4.573 4.573 0 00-.003 9.146zm0 0'/%3E%3Cpath d='M9.715 10l4.57 4.285' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3C/svg%3E")
+                    }
                 }
 
                 &__submit {
+                    color: transparent;
                     position: relative;
                     display: block;
                     width: 100%;
@@ -189,6 +204,7 @@
                     z-index: 3;
                     cursor: pointer;
                     outline-offset: -2px;
+                    padding: 0;
                 }
     
             }
