added placeholder doco

--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -229,8 +229,7 @@
                 }
             }
         }        
-    }
-}
+    }}
 
 // 
 // Logo
@@ -259,6 +258,9 @@
         width: 10rem;
     }
 }
+
+
+
 
 // Visibility utility classes
 .hidden {
