--- a/packages/storybook-html/src/components/header/header.html
+++ b/packages/storybook-html/src/components/header/header.html
@@ -22,7 +22,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="nav-search nav-search--open">
+        <div class="nav-search">
             <form class="nav-search__form" action="https://www.uq.edu.au/search/" method="get" id="uq-search" accept-charset="UTF-8">
                 <fieldset id="edit-as-sitesearch--wrapper" class="nav-search__wrapper">
                     <legend class="hidden">
