--- a/packages/storybook-html/src/components/header/header.html
+++ b/packages/storybook-html/src/components/header/header.html
@@ -45,7 +45,6 @@
                             </div>
                         </div>
                     </div>
-                   
                 </fieldset>
                 <div class="nav-search__query">
                     <span class="search-query__wrapper">
@@ -54,10 +53,10 @@
                         </label>
                         <input type="text" id="edit-q" name="q" value="" size="60" maxlength="128" class="search-query__input">
                         <span class="search-query__button">
-                            <input type="submit" id="edit-submit--2" name="op" value="Search" class="search-query__submit"></span>
+                            <input type="submit" id="edit-submit--2" name="op" value="Search" class="search-query__submit">
                         </span>
+                    </span>
                 </div>
-                
             </form>
 
             <nav class="menu-global">
