private design updates

--- a/packages/storybook-html/src/components/sections/sections.html
+++ b/packages/storybook-html/src/components/sections/sections.html
@@ -61,7 +61,7 @@
   </div>
 </div>
 
-<div class="section section--centered section--image-behind section--light-text">
+<div class="section section--centered section--image-behind section--light-text light-palette">
   <div class="section__background"><img src="http://lorempixel.com/1920/1080" /></div>
 
   <div class="section__container">
@@ -95,7 +95,7 @@
   </div>
 </div>
 
-<div class="section section--centered section--dark-tint section--light-text" style="background-image: url('//lorempixel.com/1920/600/abstract/3');">
+<div class="section section--centered section--dark-tint section--light-text light-palette" style="background-image: url('//lorempixel.com/1920/600/abstract/3');">
   <div class="section__container">
     <div class="section__header">
       <h2 class="section__title">Section title</h2>
