--- a/packages/private-design-output/src/scss/main.scss
+++ b/packages/private-design-output/src/scss/main.scss
@@ -17,5 +17,5 @@
 @use 'lists/src/scss/component' as lists;
 @use 'main-menu/src/scss/component' as main-menu;
 @use 'pane/src/scss/component' as pane;
-@use 'sections/src/scss/component' as sections;
+@use 'sections/src/scss/component' as pane;
 @use 'tabs/src/scss/component' as tabs;
