--- a/packages/sections/src/scss/_global.scss
+++ b/packages/sections/src/scss/_global.scss
@@ -20,23 +20,24 @@ $dark-tint-bg: #494949;
 
 //
 // Tints
-// Provide an overlay over backgrounds to darken, lighten an image to provide
-// better visual contrast for content.
+// Provide an overlay over backgrounds to darken, lighten an image to provide better visual contrast for content.
 // Can be used as extensions on components that accommodate overlaid content.
+//
+
 %tint {
   position: relative;
   overflow: hidden;
 }
 
 %tint-overlay {
-  content: '';
+  content: "";
+  width: 100%;
   height: 100%;
-  left: 0;
-  opacity: .5;
   position: absolute;
   top: 0;
-  width: 100%;
+  left: 0;
   z-index: 1;
+  opacity: 0.5;
 }
 
 %tint-content {
