--- a/packages/sections/src/scss/_global.scss
+++ b/packages/sections/src/scss/_global.scss
@@ -8,7 +8,7 @@
 // $messages-warning-bg: #fff9ee;
 // $messages-warning-border-color: #ffd179;
 
-
+/*
 // $large-up
 // $columns
 // $offset
@@ -65,3 +65,4 @@ $dark-tint-bg: #494949;
     background: #000;
   }
 }
+*/
