--- a/packages/accordion/src/scss/_component.scss
+++ b/packages/accordion/src/scss/_component.scss
@@ -1,7 +1,7 @@
-@use '../../node_modules/@uqmchu/core/src/scss/_foundation-global' as *;
-@use '../../node_modules/@uqmchu/core/src/scss/_global' as *;
+@use '../../../core/src/scss/_foundation-global' as *;
+@use '../../../core/src/scss/_global' as *;
 @use 'global' as *;
-@import "../../node_modules/@uqmchu/core/src/fonts/uq-icons/scss/mixins";
+@import "../../../core/src/fonts/uq-icons/scss/mixins";
 
 // Accordion / Toggle style
 //
