--- a/packages/body/src/scss/_component.scss
+++ b/packages/body/src/scss/_component.scss
@@ -1,5 +1,5 @@
-@use '../../node_modules/@uqmchu/core/src/scss/_foundation-global' as *;
-@use "../../node_modules/@uqmchu/core/src/scss/global" as *;
+@use '../../../core/src/scss/_foundation-global' as *;
+@use "../../../core/src/scss/global" as *;
 @use 'global' as *;
 
 @use '../../node_modules/foundation-sites/scss/foundation/components/tables' with (
@@ -8,7 +8,7 @@
 @use '../../node_modules/foundation-sites/scss/foundation/components/flex-video';
 
 @import '../../node_modules/font-awesome/scss/mixins';
-@import "../../node_modules/@uqmchu/core/src/fonts/uq-icons/scss/mixins";
+@import "../../../core/src/fonts/uq-icons/scss/mixins";
 
 h1,
 h2,
