--- a/packages/footer/src/scss/_global.scss
+++ b/packages/footer/src/scss/_global.scss
@@ -1,4 +1,4 @@
-@use '../../node_modules/@uqmchu/core/src/scss/_global' as *;
+@use '../../../core/src/scss/_global' as *;
 
 // Variables, functions, and mixins
 $site-footer-color: mix(white, $uq-purple, 75%);
