--- a/packages/lists/src/scss/_component.scss
+++ b/packages/lists/src/scss/_component.scss
@@ -1,4 +1,4 @@
-@use "../../node_modules/@uqmchu/core/src/scss/global" as *;
+@use "../../../core/src/scss/global" as *;
 @use 'global' as *;
 
 // Lists
