--- a/packages/page-header/src/scss/_component.scss
+++ b/packages/page-header/src/scss/_component.scss
@@ -1,5 +1,5 @@
-@use '../../node_modules/@uqmchu/core/src/scss/_foundation-global' as *;
-@use '../../node_modules/@uqmchu/core/src/scss/_global' as *;
+@use '../../../core/src/scss/_foundation-global' as *;
+@use '../../../core/src/scss/_global' as *;
 @use 'global' as *;
 
 // Page Header: Block of background colour with padding around content ususally the page title along with the breadcrumb.
