--- a/packages/page-header/src/scss/_global.scss
+++ b/packages/page-header/src/scss/_global.scss
@@ -1,3 +1,3 @@
-@use '../../node_modules/@uqmchu/core/src/scss/_global' as *;
+@use '../../../core/src/scss/_global' as *;
 
 $page-header-shaded-bg: #f5f5f5;
