--- a/packages/pane/src/scss/_global.scss
+++ b/packages/pane/src/scss/_global.scss
@@ -1,4 +1,4 @@
-@use '../../node_modules/@uqmchu/core/src/scss/_global' as *;
+@use '../../../core/src/scss/_global' as *;
 
 $pane-border: #eee;
 $pane-shaded-bg: #f5f5f5;
